--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 						</header>
 						<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
 						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
+							<li><a href="#" class="button">Continua a leggere</a></li>
 						</ul>
 					</section>
 
@@ -77,13 +77,13 @@
 							</article>
 						</div>
 						<ul class="actions">
-							<li><a href="#" class="button">Full Portfolio</a></li>
+							<li><a href="#" class="button">Home</a></li>
 						</ul>
 					</section>
 
 				<!-- Three -->
 					<section id="three">
-  <h2>Get In Touch</h2>
+  <h2>Contattami</h2>
   <p>Scrivimi per fissare un appuntamento o chiedere informazioni. Ti risponderò il prima possibile.</p>
   <div class="row">
     <div class="col-8 col-12-small">
@@ -488,4 +488,5 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 
 	</body>
+
 </html>
