--- a/portfolio.html
+++ b/portfolio.html
@@ -33,7 +33,9 @@
           <p>Una panoramica del percorso formativo e delle esperienze professionali.</p>
         </header>
 
-        <span class="image main"><img src="images/banner-curriculum.png" alt="Banner Curriculum" /></span>
+        <span class="image main">
+  <img src="images/banner-curriculum.png" alt="Banner Curriculum" width="100%" style="max-width:600px; height:auto;" />
+</span>
 
         <h2>Formazione</h2>
         <p>Laurea magistrale in Psicologia Clinica presso l’Università degli Studi di [Nome], con tesi su [tema]. Specializzazione in tecniche di ascolto attivo, valutazione psicodiagnostica e intervento individuale.</p>
@@ -71,5 +73,6 @@
   <script src="assets/js/main.js"></script>
 </body>
 </html>
+
 
 
