--- a/portfolio.html
+++ b/portfolio.html
@@ -38,10 +38,10 @@
 </span>
 
         <h2>Formazione</h2>
-        <p>Laurea magistrale in Psicologia Clinica presso l’Università degli Studi di [Nome], con tesi su [tema]. Specializzazione in tecniche di ascolto attivo, valutazione psicodiagnostica e intervento individuale.</p>
+        <p>Laurea magistrale in Psicologia Clinica presso l’Università degli Studi di Messina, con tesi su (boh). Specializzazione in tecniche di ascolto attivo, valutazione psicodiagnostica e intervento individuale.</p>
 
         <h2>Esperienze</h2>
-        <p>Stage presso il centro [nome struttura], attività di supporto psicologico, osservazione clinica e conduzione di colloqui. Collaborazioni con studi privati e associazioni territoriali.</p>
+        <p>Stage presso il centro (boh), attività di supporto psicologico, osservazione clinica e conduzione di colloqui. Collaborazioni con studi privati e associazioni territoriali.</p>
 
         <h2>Competenze</h2>
         <ul>
@@ -73,6 +73,7 @@
   <script src="assets/js/main.js"></script>
 </body>
 </html>
+
 
 
 
