--- a/index.html
+++ b/index.html
@@ -33,10 +33,9 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Ipsum lorem dolor aliquam ante commodo<br />
-							magna sed accumsan arcu neque.</h2>
+							<h2>Figura professionale</h2>
 						</header>
-						<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
+						<p>Laureata in Psicologia clinica all’Università di Messina, unisco competenze accademiche con pratica quotidiana. Come tutor DSA/BES, offro strumenti concreti per affrontare le sfide scolastiche ed emotive. Vuoi sapere altro su di me?</p>
 						<ul class="actions">
 							<li><a href="portfolio.html" class="button">Continua a leggere</a></li>
 						</ul>
@@ -491,5 +490,6 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 	</body>
 
 </html>
+
 
 
