--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 					<section id="one">
 						<header class="major">
 							<h2>Figura professionale</h2>
+							<a href="images/banner-curriculum.png" class="image fit thumb"><img src="images/banner-curriculum.png" alt="Banner professionale curriculum e competenze" /></a>
 						</header>
 						<p>Laureata in Psicologia clinica all’Università di Messina, unisco competenze accademiche con pratica quotidiana. Come tutor DSA/BES, offro strumenti concreti per affrontare le sfide scolastiche ed emotive. Vuoi sapere altro su di me?</p>
 						<ul class="actions">
@@ -490,6 +491,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 	</body>
 
 </html>
+
 
 
 
