--- a/portfolio.html
+++ b/portfolio.html
@@ -6,6 +6,7 @@
   <title>Articolo Curriculum</title>
   <link rel="stylesheet" href="assets/css/main.css" />
   <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+<link rel="icon" type="image/png" href="images/favicon.png" />
 </head>
 <body class="is-preload">
 
@@ -73,6 +74,7 @@
   <script src="assets/js/main.js"></script>
 </body>
 </html>
+
 
 
 
